--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,8 @@
 <body>
   <div id="toolbar">
     <button id="add-btn">Add Person</button>
+    <button id="delete-btn">Delete Person</button>
+    <button id="edit-btn">Edit Person</button>
   </div>
 
   <section>
